# cosmic-ext-applet-now-playing

./: .gitignore  Cargo.toml  README.md  justfile
flatpak/: com.github.DiegoMMR.CosmicExtAppletNowPlaying.json
i18n/en/: cosmic_ext_applet_now_playing.ftl
i18n/nl/: cosmic_ext_applet_now_playing.ftl
i18n/sv/: cosmic_ext_applet_now_playing.ftl
i18n/uk/: cosmic_ext_applet_now_playing.ftl
res/: com.github.DiegoMMR.CosmicExtAppletNowPlaying.desktop  com.github.DiegoMMR.CosmicExtAppletNowPlaying.metainfo.xml
src/: album_color.rs  i18n.rs  main.rs  metadata.rs  player.rs  window.rs
src/core/: localization.rs
